--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,37 @@
 </header>
       
 <main>
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="content-section">
+          <h2 class="text-center mb-4">Contact Me</h2>
+          <form id="contactForm">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+              <label for="subject" class="form-label">Subject</label>
+              <input type="text" class="form-control" id="subject" required>
+            </div>
+            <div class="mb-3">
+              <label for="message" class="form-label">Message</label>
+              <textarea class="form-control" id="message" rows="5" required></textarea>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary" style="background-color: var(--accent); border: none;">Send Message</button>
+            </div>
+          </form>
+          <div id="formMessage" class="mt-3 text-center"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
       
 <footer>
