added images, link to year sites not working

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="gallery-preview rounded overflow-hidden">
-            <img src="img/placeholder.webp" alt="Project 1" class="img-fluid w-100">
+            <img src="img/sophCover.png" alt="Project 1" class="img-fluid w-100">
             <div class="p-3 bg-white card-text-content">
               <h5>Early Work</h5>
               <p>My first steps into web design</p>
@@ -54,7 +54,7 @@
         </div>
         <div class="col-md-4">
           <div class="gallery-preview rounded overflow-hidden">
-            <img src="img/placeholder.webp" alt="Project 2" class="img-fluid w-100">
+            <img src="img/juniorCover.png" alt="Project 2" class="img-fluid w-100">
             <div class="p-3 bg-white card-text-content">
               <h5>Junior Year</h5>
               <p>Developing more advanced techniques</p>
@@ -63,7 +63,7 @@
         </div>
         <div class="col-md-4">
           <div class="gallery-preview rounded overflow-hidden">
-            <img src="img/placeholder.webp" alt="Project 3" class="img-fluid w-100">
+            <img src="img/seniorCover.png" alt="Project 3" class="img-fluid w-100">
             <div class="p-3 bg-white card-text-content">
               <h5>Current Projects</h5>
               <p>Where my skills are today</p>
