--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
-          <img src="img/placeholder.webp" alt="Sophomore Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
+          <img src="img/sophCover.png" alt="Sophomore Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
         </div>
         <p>My first major web projects where I learned HTML/CSS fundamentals and basic design principles.</p>
         <div class="text-center">
@@ -66,7 +66,7 @@
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
-          <img src="img/placeholder.webp" alt="Junior Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
+          <img src="img/juniorCover.png" alt="Junior Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
         </div>
         <p>Where I began incorporating JavaScript, responsive design, and more complex layouts.</p>
         <div class="text-center">
@@ -89,7 +89,7 @@
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
-          <img src="img/placeholder.webp" alt="Senior Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
+          <img src="img/seniorCover.png" alt="Senior Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
         </div>
         <p>My current work showcasing full-stack capabilities, advanced interactivity, and professional design.</p>
         <div class="text-center">
