--- a/gallery.html
+++ b/gallery.html
@@ -39,13 +39,13 @@
     <div class="year-card rounded">
       <div class="year-header">
         <h2>Sophomore Year</h2>
-        <p class="mb-0">The Beginning of My Journey</p>
+        <p class="mb-0">En Caffant</p>
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
           <img src="img/sophCover.png" alt="Sophomore Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
         </div>
-        <p>My first major web projects where I learned HTML/CSS fundamentals and basic design principles.</p>
+        <p>My first major web project where I utilized all of the basic design principles I'd learned up until then.</p>
         <div class="text-center">
           <a href="sophomore.html" class="btn project-btn">View Sophomore Projects</a>
         </div>
@@ -62,13 +62,13 @@
     <div class="year-card rounded">
       <div class="year-header">
         <h2>Junior Year</h2>
-        <p class="mb-0">Developing Advanced Skills</p>
+        <p class="mb-0">Career Site</p>
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
           <img src="img/juniorCover.png" alt="Junior Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
         </div>
-        <p>Where I began incorporating JavaScript, responsive design, and more complex layouts.</p>
+        <p>Where I began incorporating JavaScript, responsive design, and more complex but uniform layouts.</p>
         <div class="text-center">
           <a href="junior.html" class="btn project-btn">View Junior Projects</a>
         </div>
@@ -85,13 +85,13 @@
     <div class="year-card rounded">
       <div class="year-header">
         <h2>Senior Year</h2>
-        <p class="mb-0">Polished Portfolio Work</p>
+        <p class="mb-0">Jersey Shore Candle</p>
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
           <img src="img/seniorCover.png" alt="Senior Project" class="img-fluid rounded mb-3" style="max-height: 300px; width: auto;">
         </div>
-        <p>My current work showcasing full-stack capabilities, advanced interactivity, and professional design.</p>
+        <p>My current work showcasing full capabilities, advanced interactivity, and professional design.</p>
         <div class="text-center">
           <a href="senior.html" class="btn project-btn">View Senior Projects</a>
         </div>
