Milestone 9: Testing & Debugging Check-In

--- a/junior.html
+++ b/junior.html
@@ -30,14 +30,14 @@
 
 <main class="py-5">
   <div class="container">
-    <h1 class="text-center mb-5">Career Site!</h1>
+    <h1 class="text-center mb-5">Trunk or Treat!</h1>
     
     <!-- Gallery Grid -->
     <div class="row g-4 gallery-grid">
       <!-- Card Type 1: Image with overlay text -->
       <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
         <div class="gallery-card card-type-1">
-          <img src="img/placeholder.webp" class="img-fluid" alt="Design Project">
+          <img src="img/jr1.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
               <h3>Minimalist Brand Design</h3>
@@ -48,7 +48,7 @@
   </div>
         <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
         <div class="gallery-card card-type-1">
-          <img src="img/placeholder.webp" class="img-fluid" alt="Design Project">
+          <img src="img/jr2.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
               <h3>Minimalist Brand Design</h3>
@@ -59,7 +59,7 @@
   </div>
   <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
         <div class="gallery-card card-type-1">
-          <img src="img/placeholder.webp" class="img-fluid" alt="Design Project">
+          <img src="img/jr3.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
               <h3>Minimalist Brand Design</h3>
