--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
     <div class="year-card rounded">
       <div class="year-header">
         <h2>Junior Year</h2>
-        <p class="mb-0">Career Site</p>
+        <p class="mb-0">Trunk or Treat</p>
       </div>
       <div class="year-content text-center">
         <div class="d-flex justify-content-center">
@@ -111,17 +111,18 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="gallery.html">Gallery</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <div class="text-center py-3">
-    <p class="mb-0">© 2025 Lincoln's Portfolio</p>
+    <p class="mb-0">© 2025 Lincoln's Senior Site</p>
   </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
