--- a/index.html
+++ b/index.html
@@ -78,10 +78,28 @@
   </section>
 </main>
 
-<footer class="py-4 text-white text-center">
-  <p class="mb-0">© 2025 Lincoln's Portfolio. All rights reserved.</p>
+<footer>
+  <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+    <div class="container-fluid flex-column text-center">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="text-center py-3">
+    <p class="mb-0">© 2025 Lincoln's Senior Site</p>
+  </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
