text content in

--- a/junior.html
+++ b/junior.html
@@ -33,26 +33,26 @@
     <h1 class="text-center mb-5">Trunk or Treat!</h1>
     
     <!-- Gallery Grid -->
-    <div class="row g-4 gallery-grid">
+    <div class="row gallery-grid">
       <!-- Card Type 1: Image with overlay text -->
       <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
         <div class="gallery-card card-type-1">
           <img src="img/jr1.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Hide Text</h3>
+              <p>A basic general information card where you can elect to hide or show more text content</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
         <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
         <div class="gallery-card card-type-1">
           <img src="img/jr2.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Image Rotation</h3>
+              <p>You can cycle through the different images in the gallery based on which button you click</p>
         </div>
       </div>
     </div>
@@ -62,8 +62,8 @@
           <img src="img/jr3.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Hide Text + Image</h3>
+              <p>Similar deal to earlier on in the site, now with a hiding image!</p>
           </div>
       </div>
     </div>
