--- a/senior.html
+++ b/senior.html
@@ -103,8 +103,8 @@
           <img src="img/sr1.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Collection Filter</h3>
+              <p>Using our shop collection dropdown, you can filter through different item cards to select what you want through the company's different collection options</p>
             </div>
           </div>
         </div>
@@ -116,8 +116,8 @@
           <img src="img/sr2.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Product Page</h3>
+              <p>Upon selecting an item, you can choose which size it comes in and add it to your cart</p>
             </div>
           </div>
         </div>
@@ -129,8 +129,8 @@
           <img src="img/sr3.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Checkout</h3>
+              <p>Whatever you add to the cart will show up at checkout with a responsive price based on the quantity and type of items you purchased. To place an order you must provide shipping information and proceed to checkout</p>
             </div>
           </div>
         </div>
