--- a/sophomore.html
+++ b/sophomore.html
@@ -41,20 +41,8 @@
           <img src="img/soph1.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-      <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
-        <div class="gallery-card card-type-1">
-          <img src="img/soph2.png" class="img-fluid" alt="Design Project">
-          <div class="card-overlay">
-            <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Merchandise Selector</h3>
+              <p>Using JS we made it so that you could select different merchandise types based on color or sex of the clothing piece </p>
             </div>
           </div>
         </div>
@@ -65,8 +53,21 @@
           <img src="img/soph3.png" class="img-fluid" alt="Design Project">
           <div class="card-overlay">
             <div class="overlay-content">
-              <h3>Minimalist Brand Design</h3>
-              <p>A clean, modern brand identity created for a tech startup focusing on simplicity and functionality.</p>
+              <h3>Add to Cart</h3>
+              <p>You can add all of the different items from our product list to the order</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-md-6 col-lg-4 gallery-item" data-category="design">
+        <div class="gallery-card card-type-1">
+          <img src="img/soph2.png" class="img-fluid" alt="Design Project">
+          <div class="card-overlay">
+            <div class="overlay-content">
+              <h3>Cart + Filter</h3>
+              <p>Our cart has full functionality where you can add different items, quantities of those items with a reactive price total based on what has been added
+                <br><br>There is also a product filter where you can cycle through which kind of items you want</p>
             </div>
           </div>
         </div>
